# onnx-android

./: .gitignore  README.md
app/: settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/com/minimalapp/onnx/: ExampleInstrumentedTest.java
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/minimalapp/onnx/: AlbertModel.java  MainActivity.java
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/minimalapp/onnx/: ExampleUnitTest.java
app/gradle/wrapper/: gradle-wrapper.properties
onnx-android/: Cargo.toml
onnx-android/src/: core.rs  lib.rs
scripts/: export.py
