[package]
name = "onnx-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
tract-onnx = "0.20.18"
anstyle = "=1.0.2"
ndarray = "0.15.3"
tokenizers = "0.13"
clap_builder = { version = "=4.3.24" }
clap_lex = { version = "=0.5.0" }
jni = "0.20.0"