[package]
name = "onnx-android"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
tract-onnx = "0.20.18"
anstyle = "=1.0.2"
ndarray = "0.15.3"
tokenizers = "0.13"
clap_builder = { version = "=4.3.24" }
clap_lex = { version = "=0.5.0" }
jni = "0.20.0"